# GentleAgents

./: .gitignore  LICENSE  README.md  pyproject.toml
gentleagents/: __init__.py
gentleagents/agents/: agent.py  helper.py  test_agent.py
gentleagents/engines/: openai_client.py  test_openai.py
gentleagents/loadenv/: loadenv.py
gentleagents/queries/: query.py
gentleagents/teams/: team.py  test_team.py
gentleagents/tools/: tool.py
gentleagents/validations/: models.py
